@@ -72,6 +72,7 @@ DEV: scalability + performance
 - fixed regression: compat=1.11 broke arcs inside of axis
 - new feature: ensured that arcs inside of axis make use of 'axis cs' and 'axis direction cs' automatically
 - fixed bug: precision of transformation cartesian to polar was too low (added atan2 to fpu)
+- new feature: added 'y filter/.expression={y==3 ? nan : y}' to simplify coordinate filters
 
 1.11: usability + bug fixes.
 - new feature: "hide obscured x ticks=false" to disable the feature which hides ticks
