@@ -1,10 +1,42 @@
 \section{Skipping Or Changing Coordinates -- Filters}
 \label{sec:filters}
 
-\PGFPlots\ offers filters. A filter expects a (numeric) input coordinate and is allows to modify the coordinate or throw it away. Filters can either operate on individual coordinates or on all simultaneously.
+\PGFPlots\ offers filters. A filter expects a (numeric) input coordinate and is allowed to modify the coordinate or throw it away. Filters can either operate on individual coordinates or on all simultaneously.
 
 See also Section~\ref{sec:transformation:interaction} for different types of transformations and their interaction.
 
+\begin{\pgfplotsxykeylist}{\x\ filter/.expression=\marg{math expression}}
+	Installs a coordinate filter which allows to modify the current value of a \emph{single} coordinate.
+
+	The argument \emph{math expression} is a math expression which contains |x|, |y|, or |z|. 
+\begin{codeexample}[]
+\begin{tikzpicture}
+	\begin{axis}[grid=major]
+	\addplot+[
+		unbounded coords=jump,
+		x filter/.expression={x+1},
+		y filter/.expression={y==3 ? nan : y},
+	]
+	table {
+	x y 
+	1 2
+	1.5 2.5
+	2 3
+	2.5 3.5
+	3 4
+	};
+	\end{axis}
+\end{tikzpicture}
+\end{codeexample}
+	
+	The |x filter| is evaluated first. It can depend on |x|, |y|, and |z| whose values are the ``prepared'' coordinates: values which have been found after applying |x coord trafo| and any logarithms (for logarithmic axes).
+
+	The |y filter| is evaluated as next. It can depend on |x| which is the result of |x filter|. It can also depend on |y| and |z| which have the same value as discussed in the previous paragraph.
+
+	The |z filter| is evaluated as last. It can depend on |x| and |y| which are result of their respective filters. It can also depend on |z| which is the plain $z$ coordinate (as discussed for |x filter|).
+
+	Defining filters by math expression is actually a special case of |x filter|, see below.
+\end{\pgfplotsxykeylist}
 
 \begin{pgfplotsxycodekeylist}{\x\ filter,filter point}
 The code keys |x filter| and |y filter| allow coordinate filtering which are based on a \emph{single} coordinate. A coordinate filter gets an input coordinate as |#1| (on input, the same value is stored in |\pgfmathresult|), applies some operation and writes the result into the macro |\pgfmathresult|. If |\pgfmathresult| is empty afterwards, the coordinate is discarded. You can also set |\pgfmathresult| to |nan| or |inf| in which case the coordinate can be either discarded (if |unbounded coords=discard| is set) or the plot can be interrupted (the case |unbounded coords=jump|).
