@@ -190,14 +190,14 @@ If you use |compat=1.12| (or newer) and compile your documents by means of |lual
 		\item Math expressions which involve macro definitions are unavailable in |lua backend|. Best-practise: prefer |declare function| over macro constants:
 \begin{codeexample}[]
 \begin{tikzpicture}
-	\begin{axis}[title=Do,samples=2]
+	\begin{axis}[small,title=Do,samples=2]
 	\addplot+[declare function={C=4;}] {C*x};
 	\end{axis}
 \end{tikzpicture}
 \end{codeexample}
 \begin{codeexample}[]
 \begin{tikzpicture}
-	\begin{axis}[title=Don't,samples=2]
+	\begin{axis}[small,title=Don't,samples=2]
 	\def\constantC{4}
 	\addplot {\constantC*x};
 	\end{axis}
@@ -208,7 +208,25 @@ If you use |compat=1.12| (or newer) and compile your documents by means of |lual
 
 \texttt{Package pgfplots info on input line 16: Deactivating LUA version of plot expression for plot 0 (type 'pgfplothandlerlineto'): y expression '\textbackslash constantC *x' contains a TeX macro.}
 
-		\item Any operation which requires ``native'' \TeX\ code is unavailable in |lua backend|. This includes |x filter/.code={...}| since |/.code| cannot be mapped to \lua.
+		\item Any operation which requires ``native'' \TeX\ code is unavailable in |lua backend|. This includes |x filter/.code={...}| since |/.code| cannot be mapped to \lua. Best-practise: prefer |x filter/.expression| over |x filter/.code|:
+\begin{codeexample}[]
+\begin{tikzpicture}
+	\begin{axis}[small,grid=major,title=Do]
+	\addplot+[
+		unbounded coords=jump,
+		y filter/.expression={y==3 ? nan : y},
+	]
+	table {
+	x   y 
+	1   2
+	1.5 2.5
+	2   3
+	2.5 3.5
+	3   4
+	};
+	\end{axis}
+\end{tikzpicture}
+\end{codeexample}
 
 		\item Plot expression can be processed entirely in \lua, all other input coordinate types use \TeX\ to read the value and hand-over to \lua.
 
