@@ -112,7 +112,7 @@ pgfplotstable.pdf	&	for 1.12	& for 1.12	&	for 1.9		& for 1.5\\
 example	latex		&	for 1.12	&	&	for 1.9     & 2009-12-30					\\
 example	context		&	for 1.12	&	&	for 1.9     & 2009-12-30				\\
 example	plain tex	&	for 1.12	&	&	for 1.9     & 2009-12-30				\\
-tests context		&	for 1.11	& 	&  for 1.9\\
+tests context		&	for 1.12	& 	&  for 1.9\\
 \end{tabular}
 
 \section{Documentation todo}
