@@ -93,3 +93,4 @@ unittest_view_0_90_viewdepth.tex
 unittest_updateLimits_false.tex
 unittest_libs_statistics_boxplot_average.tex
 unittest_libs_statistics_boxplot_variable_width.tex
+unittest_filter_by_expression.tex
