@@ -1827,6 +1827,9 @@
 	/pgfplots/z filter/.code={},
 	/pgfplots/z filter/.belongs to family=/pgfplots,
 	/pgfplots/filter point/.code=,
+	/pgfplots/x filter/.expression/.code=\pgfplots@install@filter@expression{x filter}{#1},
+	/pgfplots/y filter/.expression/.code=\pgfplots@install@filter@expression{y filter}{#1},
+	/pgfplots/z filter/.expression/.code=\pgfplots@install@filter@expression{z filter}{#1},
 	/pgfplots/restrict x to domain/.style={/pgfplots/@restrict to domain={x}{}{#1}{0}},%
 	/pgfplots/restrict y to domain/.style={/pgfplots/@restrict to domain={y}{}{#1}{0}},%
 	/pgfplots/restrict z to domain/.style={/pgfplots/@restrict to domain={z}{}{#1}{0}},%
