@@ -3560,6 +3560,20 @@
 	\pgfplots@log{\pgfplots@LUA@loglevel@info}{Using 'lua backend=false' for plot \the\pgfplots@numplots\space (type '\pgfplotsplothandlername'): #1.}%
 }%
 
+\def\pgfplots@LUA@survey@get@filter#1{%
+	\pgfkeysgetvalue{/pgfplots/#1 filter/.@cmd}\pgfplots@loc@TMPc
+	\ifx\pgfplots@loc@TMPc\pgfplots@empty@command@key
+	\else 
+		\pgfplots@ifisfilterexpression{#1 filter}{%
+			\pgfkeysgetvalue{/pgfplots/#1 filter/@expressionvalue}\pgfplotsretval
+		}{%
+			\pgfplots@LUA@backend@supportedfalse
+			\pgfplots@LUA@survey@log@deactivation{LUA does not support #1 filter (yet)}%
+			\let\pgfplotsretval=\pgfutil@empty
+		}%
+	\fi
+}%
+
 \def\pgfplots@LUA@survey@start{%
 	\ifpgfplots@LUA@backend@supported
 		\ifx\pgfplotsplothandlerLUAfactory\pgfutil@empty
@@ -3590,9 +3604,12 @@
 			\pgfplots@LUA@backend@supportedfalse
 		\fi
 		\pgfkeysgetvalue{/pgfplots/pre filter/.@cmd}\pgfplots@loc@TMPc\ifx\pgfplots@loc@TMPc\pgfplots@empty@command@key\else \pgfplots@LUA@backend@supportedfalse\pgfplots@LUA@survey@log@deactivation{LUA does not support filter (yet)}\fi
-		\pgfkeysgetvalue{/pgfplots/x filter/.@cmd}\pgfplots@loc@TMPc\ifx\pgfplots@loc@TMPc\pgfplots@empty@command@key\else \pgfplots@LUA@backend@supportedfalse\pgfplots@LUA@survey@log@deactivation{LUA does not support filter (yet)}\fi
-		\pgfkeysgetvalue{/pgfplots/y filter/.@cmd}\pgfplots@loc@TMPc\ifx\pgfplots@loc@TMPc\pgfplots@empty@command@key\else \pgfplots@LUA@backend@supportedfalse\pgfplots@LUA@survey@log@deactivation{LUA does not support filter (yet)}\fi
-		\pgfkeysgetvalue{/pgfplots/z filter/.@cmd}\pgfplots@loc@TMPc\ifx\pgfplots@loc@TMPc\pgfplots@empty@command@key\else \pgfplots@LUA@backend@supportedfalse\pgfplots@LUA@survey@log@deactivation{LUA does not support filter (yet)}\fi
+		\pgfplots@LUA@survey@get@filter x%
+		\let\pgfplots@loc@filter@x=\pgfplotsretval
+		\pgfplots@LUA@survey@get@filter y%
+		\let\pgfplots@loc@filter@y=\pgfplotsretval
+		\pgfplots@LUA@survey@get@filter z%
+		\let\pgfplots@loc@filter@z=\pgfplotsretval
 		\pgfkeysgetvalue{/pgfplots/filter point/.@cmd}\pgfplots@loc@TMPc\ifx\pgfplots@loc@TMPc\pgfplots@empty@command@key\else \pgfplots@LUA@backend@supportedfalse\pgfplots@LUA@survey@log@deactivation{LUA does not support filter (yet)}\fi
 		%
 		\pgfkeysgetvalue{/pgfplots/execute for finished point}\pgfplots@loc@TMPc\ifx\pgfplots@loc@TMPc\pgfutil@empty\else \pgfplots@LUA@backend@supportedfalse\fi
@@ -3645,6 +3662,10 @@
 				config.warnForfilterDiscards = \pgfplots@boolval{pgfplots@warn@for@filter@discards};^^J%
 				config.pointmetarel = \pgfplots@perpointmeta@rel@choice;^^J%
 				config.updateLimits = \ifpgfplots@bb@isactive true\else false\fi;^^J%
+				config.filterExpressionByDir = {^^J%
+					"\pgfplots@loc@filter@x",^^J%
+					"\pgfplots@loc@filter@y",^^J%
+					"\pgfplots@loc@filter@z"};^^J%
 				gca.plothandlers[\the\pgfplots@numplots+1] = plothandler;^^J%
 				gca.currentPlotHandler = plothandler;^^J%
 				plothandler:surveystart();^^J%
@@ -6985,6 +7006,39 @@
 		\pgfkeysgetvalue{/data point/y}\pgfplots@current@point@y
 		\pgfkeysgetvalue{/data point/z}\pgfplots@current@point@z
 	\fi%
+}%
+
+% #1 the target which will contain the filter
+% #2 a math expression.
+\def\pgfplots@install@filter@expression#1#2{%
+	\pgfkeysdef{/pgfplots/#1}{\pgfplots@filter@expression{#1}}%
+	\pgfkeyssetvalue{/pgfplots/#1/@expressionvalue}{#2}%
+}%
+
+% Executes #2 if the filter key was defined by
+% \pgfplots@install@filter@expression.
+%
+% #1 the target which will contain the filter (like 'x filter')
+% #2: true code
+% #3: false code
+\def\pgfplots@ifisfilterexpression#1#2#3{%
+	\pgfkeysgetvalue{/pgfplots/#1/.@cmd}\pgfplots@loc@TMPc
+	\long\def\pgfplots@loc@TMPd##1\pgfeov{\pgfplots@filter@expression{#1}}%
+	\ifx\pgfplots@loc@TMPc\pgfplots@loc@TMPd
+		#2\relax
+	\else
+		#3\relax
+	\fi
+}%
+
+% the key name (example: 'x filter')
+\def\pgfplots@filter@expression#1{%
+	\begingroup
+	\pgfkeys{/pgf/fpu=true}%
+	\pgfkeysgetvalue{/pgfplots/#1/@expressionvalue}\pgfplots@loc@TMPa
+	\pgfmathparse{\pgfplots@loc@TMPa}%
+	\pgfmath@smuggleone\pgfmathresult
+	\endgroup
 }%
 
 % this is a convenience macro to save storage in the long coordinate
