@@ -1116,16 +1116,22 @@
 		\E\pgfplots@invoke@prefilter
 		%
 		\E\expandafter\E\pgfplots@prepare@xcoord\E\expandafter{\E\pgfplots@current@point@x}%
-		\E\expandafter\E\pgfplots@invoke@filter\E\expandafter{\E\pgfmathresult}{x}%
 		\E\let\E\pgfplots@current@point@x=\E\pgfmathresult
 		%
 		\E\expandafter\E\pgfplots@prepare@ycoord\E\expandafter{\E\pgfplots@current@point@y}%
-		\E\expandafter\E\pgfplots@invoke@filter\E\expandafter{\E\pgfmathresult}{y}%
 		\E\let\E\pgfplots@current@point@y=\E\pgfmathresult
 		%
 		\ifpgfplots@curplot@threedim
 			\E\expandafter\E\pgfplots@prepare@zcoord\E\expandafter{\E\pgfplots@current@point@z}%
-			\E\expandafter\E\pgfplots@invoke@filter\E\expandafter{\E\pgfmathresult}{z}%
+			\E\let\E\pgfplots@current@point@z=\E\pgfmathresult
+		\fi
+		%
+		\E\expandafter\E\pgfplots@invoke@filter\E\expandafter{\E\pgfplots@current@point@x}{x}%
+		\E\let\E\pgfplots@current@point@x=\E\pgfmathresult
+		\E\expandafter\E\pgfplots@invoke@filter\E\expandafter{\E\pgfplots@current@point@y}{y}%
+		\E\let\E\pgfplots@current@point@y=\E\pgfmathresult
+		\ifpgfplots@curplot@threedim
+			\E\expandafter\E\pgfplots@invoke@filter\E\expandafter{\E\pgfplots@current@point@z}{z}%
 			\E\let\E\pgfplots@current@point@z=\E\pgfmathresult
 		\fi
 		%
@@ -1245,6 +1251,9 @@
 	quiver/u filter/.code=,
 	quiver/v filter/.code=,
 	quiver/w filter/.code=,
+	quiver/u filter/.expression/.code=\pgfplots@install@filter@expression{quiver/u filter}{#1},
+	quiver/v filter/.expression/.code=\pgfplots@install@filter@expression{quiver/v filter}{#1},
+	quiver/w filter/.expression/.code=\pgfplots@install@filter@expression{quiver/w filter}{#1},
 	quiver/u value/.code	=\pgfplots@set@source@for{quiver/u}{#1}{0},%
 	quiver/u/.code			=\pgfplots@set@source@for{quiver/u}{#1}{1},%
 	quiver/v value/.code	=\pgfplots@set@source@for{quiver/v}{#1}{0},%
@@ -1609,6 +1618,7 @@
 	hist/data value/.code	=\pgfplots@set@source@for{hist/data}{#1}{0},%
 	hist/data/.code			=\pgfplots@set@source@for{hist/data}{#1}{1},%
 	hist/data filter/.code=,
+	hist/data filter/.expression/.code=\pgfplots@install@filter@expression{hist/data filter}{#1},
 	hist/data value=\pgfkeysvalueof{/data point/y},
 %	hist/data=y,
 	hist/data min/.initial=\pgfkeysvalueof{/pgfplots/xmin},
