@@ -1,3 +1,7 @@
+2015-01-02 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+	
+	- new feature: added 'y filter/.expression={y==3 ? nan : y}' to simplify coordinate filters
+
 2014-12-28 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 
 	- fixed bug: boxplots: now, it sets 'mark=*' for outliers if there is no mark (compat=1.12)
